--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -216,6 +216,7 @@
 			overflow: hidden;
 			width: 150px;
 			margin: -75px auto 20px auto;
+			box-shadow: 0 0 7.5px 3.75px rgba($color-02, 0.25);
 			.image-wrap {
 				height: 0;
 				padding: 0 0 100% 0;
@@ -240,7 +241,7 @@
 			&:hover {
 				color: $color-07;
 			}
-		}		
+		}
 	}
 	.user-buttons {
 		text-align: center;
@@ -382,43 +383,25 @@
 	}
 	.flex-row {
 		align-items: center;
+		margin: 0 0 20px 0;
 		.flex-column {
-			position: relative;
-			margin: 0 0 20px 0;
-			h5, p {
-				margin: 0;
-			}
-			&.featured-title {
-				flex: 0 0 150px;
-			}
+			margin: 0 0 10px 0;
 			a {
 				display: block;
-				border: 5px solid rgba($color-02, 0.30);
+				border: 10px solid rgba($color-02, 0.30);
+				overflow: hidden;
 				color: $color-01;
 				&:hover {
 					color: $color-07;
 					img {
-						transform: scale(1.2,1.2);
+						transform: scale(1.3,1.3);
 					}
 				}
 			}
-			.featured-content {
-				border: 1px solid $color-04;
-			}
-			.image-wrap {
-				@include sizing(100%, 0);
-				overflow: hidden;
-				padding: 0 0 55% 0;
-				position: relative;
-				img {
-					margin: -25% 0 0 0;
-					width: 100%;
-					@include transition(transform 0.5s ease-in-out);
-				}
-			}
 			p {
-				@include position($type: absolute, $bottom: 6px, $left: 11px, $right: 11px);
+				@include position($type: absolute, $bottom: 0, $left: 0, $right: 0);
 				padding: 0 10px;
+				margin: 0;
 				height: 30px;
 				line-height: 30px;
 				overflow: hidden;
@@ -426,6 +409,18 @@
 				white-space: nowrap;
 				background: rgba($color-02, 0.60);
 				text-align: center;
+			}
+			.featured-content {
+				position: relative;
+			}
+			.image-wrap {
+				@include sizing(100%, 0);
+				padding: 0 0 55% 0;
+				img {
+					margin: -25% 0 0 0;
+					width: 100%;
+					@include transition(transform 0.5s ease-in-out);
+				}
 			}
 		}
 	}
