Change healing to restoration for dragons

--- a/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
+++ b/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
@@ -64,7 +64,7 @@
 		</div>
 		<div class="group">
 			<span class="group-header">Draconic</span>
-			{% set dragon = ['Physical', 'Magical', 'Healing'] %}
+			{% set dragon = ['Physical', 'Magical', 'Restoration'] %}
 			{{ _self.display_opt(multisel.options, field_id, dragon) }}
 		</div>
 	{% elseif field_id == 'pf_c_religion_opts' %}
