Add new idols for religion

--- a/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
+++ b/khyeras/_dev/ext/javiexin/advancedpf/styles/khyeras_v1/template/profilefields/multisel.html
@@ -75,7 +75,7 @@
 		</div>
 		<div class="group">
 			<span class="group-header">Idolism</span>
-			{% set idolism = ['Cecilia', 'Bhelest'] %}
+			{% set idolism = ['Ahm\'kela', 'Cecilia', 'Bhelest', 'Esyrax', 'Faryv', 'Faunir', 'Iodrah', 'Kaxitaki', 'Kelorha', 'Lahiel', 'Misanyt', 'Nilbein', 'Veditova'] %}
 			{{ _self.display_opt(multisel.options, field_id, idolism) }}
 		</div>
 	{% else %}
