--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -370,6 +370,9 @@
 			margin: 0 -2.5px;
 			padding: 0 $ffs-half;
 			align-self: flex-start;
+			&.group-religion {
+				width: 50%;
+			}
 			.group-header, label {
 				margin: $ffs $ffs-half 0 $ffs-half;
 			}
