--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -530,26 +530,29 @@
 					padding-left: 0;
 					min-height: 0;
 					dt {
-						padding-top: 80px;
+						padding-top: 100px;
 						.forum-image, .forumtitle {
-							top: -20px;
-							left: -10px;
-							right: -10px;
+							@include position($top: -20px, $left: -10px, $right: -10px);
 						}
 						.forum-image {
-							@include sizing(auto, 80px);
+							@include sizing(auto, 100px);
 							border-radius: 0;
 							border: 0;
+							background-repeat: no-repeat;
+							background-position: center bottom;
+							background-size: cover;
 							img {
-								width: 100%;
-								margin-top: -25%;
+								display: none;
+							}
+							&[style*='ajteire'], &[style*='irtuen'] {
+								background-position: center center;
 							}
 						}
 						.forumtitle {
-							height: 40px;
-							line-height: 40px;
+							margin-top: 50px;
+							height: 50px;
+							line-height: 50px;
 							position: absolute;
-							margin-top: 40px;
 							padding: 0 20px;
 							background: rgba($color-02, 0.5);
 							color: $color-01;
@@ -563,6 +566,10 @@
 								display: none;
 							}
 						}
+					}
+					&[class*='read'] dt:before, &[class*='link'] dt:before,
+					&[class*='moved'] dt:before, dt .row-item-link {
+						top: 10px;
 					}
 					&[class*='read'], &[class*='link'], &[class*='moved'] {
 						dt {
@@ -578,6 +585,11 @@
 				&:not([class*='forum']) dd.lastpost dfn {
 					position: static;
 				}
+				// &#forum-12, &#forum-15, &#forum-16 {
+				// 	&.has-forum-image dt .forum-image {
+				// 		background-position: center center;
+				// 	}
+				// }
 			}
 		}
 	}
@@ -1458,31 +1470,31 @@
 	// viewlisting.scss
 	$responsive-icon-size: $list-icon-size - 8px;
 	.topiclist > li.row dl {
-		dt .row-item-link {
-			@include sizing($responsive-icon-size + 2, $responsive-icon-size + 2);
-		}
 		dt[style*='images/icons'] {
 			background-position: 54px 1px;
+		}
+		&[class*='read'] dt:before, &[class*='link'] dt:before,
+		&[class*='moved'] dt:before, dt .row-item-link {
+			@include sizing($responsive-icon-size, $responsive-icon-size);
 		}
 		&[class*='read'], &[class*='link'], &[class*='moved'] {
 			dt {
 				min-height: ($responsive-icon-size + 2 + 5);
 				&:before {
-					@include sizing($responsive-icon-size, $responsive-icon-size);
-					line-height: $responsive-icon-size;
+					line-height: $responsive-icon-size - 2px;
 					font-size: rem(16px);
 				}
 			}
 		}
 	}
 	.styled-listing .topiclist > li.row dl[class*='forum'].has-forum-image {
-		dt .row-item-link, &[class*='read'] dt:before, &[class*='link'] dt:before,
-		&[class*='moved'] dt:before, &[class*='mine'] dt:after {
-			top: 5px;
+		&[class*='read'] dt:before, &[class*='link'] dt:before,
+		&[class*='moved'] dt:before, dt .row-item-link {
+			top: 12.5px;
 		}
 		&[class*='read'], &[class*='link'], &[class*='moved'] {
 			dt .forumtitle {
-				padding-left: 62px;
+				padding-left: 70px;
 			}
 		}
 	}
