Start creating layout for page descriptions

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -53,6 +53,10 @@
 	overflow: hidden;
 }
 
+.read-more {
+	font-style: italic;
+}
+
 /* Browser Upgrade / Browse Happy
 ========================================================================== */
 
