--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -538,9 +538,7 @@
 							@include sizing(auto, 100px);
 							border-radius: 0;
 							border: 0;
-							background-repeat: no-repeat;
 							background-position: center bottom;
-							background-size: cover;
 							img {
 								display: none;
 							}
@@ -585,11 +583,6 @@
 				&:not([class*='forum']) dd.lastpost dfn {
 					position: static;
 				}
-				// &#forum-12, &#forum-15, &#forum-16 {
-				// 	&.has-forum-image dt .forum-image {
-				// 		background-position: center center;
-				// 	}
-				// }
 			}
 		}
 	}
@@ -788,6 +781,30 @@
 			float: none;
 			width: auto;
 			padding: 0;
+		}
+	}
+	.card {
+		display: block;
+		position: relative;
+		.card-image, .card-image-right {
+			margin: 0 0 20px 0;
+		}
+		.card-image {
+			.image-wrap {
+				border-radius: 0;
+				height: 150px;
+				background-position: center center;
+				img {
+					display: none;
+				}
+			}
+		}
+		.card-details h5 {
+			@include position($type: absolute, $top: 95px, $left: 5px, $right: 5px);
+			height: 50px;
+			line-height: 50px;
+			padding: 0 20px;
+			background: rgba($color-02, 0.60);
 		}
 	}
 
