Remove format display-options function and add css instead

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1181,6 +1181,12 @@
 			}
 		}
 	}
+	.sort-tools .dropdown .display-options label {
+		padding-right: 77%;
+		select {
+			width: 75%;
+		}
+	}
 	dl.details {
 		dt {
 			float: none;
