--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -479,15 +479,14 @@
 .sort-tools .dropdown .display-options {
 	label {
 		position: relative;
-		padding: 0 0 0 65px;
+		padding: 10px 160px 0 0;
 		margin: 0 0 10px 0;
+		min-height: 40px;
 		display: block;
-		span {
-			@include position($type: absolute, $top: 12px, $left: 0);
-		}
+		line-height: 1;
 		select {
-			width: 100%;
-			min-width: 120px;
+			width: 150px;
+			@include position($type: absolute, $top: 0, $right: 0);
 		}
 	}
 	.button2 {
